# forecastability-examples

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml  v0_4_3_lag_aware_catt_mod_mrmr_plan_template_aligned.md
.github/workflows/: notebooks.yml  preflight.yml  release.yml
data/: README.md  air_passengers.csv  etth1_oht_subset.csv
data/canonical/: aapl_returns.csv  bitcoin_returns.csv
data/causal_rivers/: east_germany_8stations_6h.parquet  east_germany_8stations_6h.sha256
data/exog/: bike_sharing_hour.csv  eth_returns.csv  noise_control.csv  spy_returns.csv  vix_daily.csv
data/fixtures/routing_validation_regression/expected/: audit_summary.json  calibration.json  confidence_labels.json  synthetic_panel.json
outputs/: m4_routing_comparison.csv
outputs/notebooks/recipes/contract_roundtrip/: contract.json
outputs/notebooks/recipes/lag_aware_mod_mrmr_to_forecast_prep_contract/tables/: causal_rivers_downstream_mlf_driver_importance.csv  (+8 more)
outputs/notebooks/walkthroughs/05_forecast_prep_to_models/: comparison_table.csv
recipes/: README.md  contract_roundtrip.ipynb  lag_aware_mod_mrmr_to_forecast_prep_contract.ipynb
scripts/: download_causal_rivers.py  find_unexecuted_notebooks.py
triage_walkthroughs/: 01_forecastability_profile_walkthrough.ipynb  02_information_limits_and_compression.ipynb  03_predictive_information_learning_curves.ipynb  04_spectral_and_entropy_diagnostics.ipynb  05_batch_and_exogenous_workbench.ipynb  06_agent_ready_triage_interpretation.ipynb  07_extended_forecastability_fingerprint.ipynb  08_spectral_and_entropy_diagnostics.ipynb  09_batch_and_exogenous_workbench.ipynb  10_agent_ready_triage_interpretation.ipynb  README.md
triage_walkthroughs/outputs/json/: nb10_a2_diagnostic_batch.json  nb10_a2_f1_envelope.json
walkthroughs/: 00_air_passengers_showcase.ipynb  01_canonical_forecastability.ipynb  01_covariant_informative_showcase.ipynb  02_exogenous_analysis.ipynb  02_forecastability_fingerprint_showcase.ipynb  03_lagged_exogenous_triage_showcase.ipynb  03_triage_end_to_end.ipynb  04_routing_validation_showcase.ipynb  04_screening_end_to_end.ipynb  05_forecast_prep_to_models.ipynb  06_triage_driven_vs_naive_on_m4.ipynb  07_causal_rivers_lag_and_feature_selection.ipynb  08_extended_forecastability_showcase.ipynb  08_pcmci_causal_discovery.ipynb  09_lag_aware_mod_mrmr_showcase.ipynb  10_lag_aware_catt_scored_mod_mrmr.ipynb  README.md
walkthroughs/outputs/: m4_routing_comparison.csv
walkthroughs/outputs/pcmci_discovery/checkpoints/: bundle_pcmci_plus.pkl
walkthroughs/outputs/pcmci_discovery/tables/: final_scorecard.csv  method_decision_matrix.csv
(+45 files in other folders)
